aws/jmeter-k8s-starterkit/k8s/tool/telegraf/telegraf-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: telegraf-operator
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: telegraf-operator
  namespace: telegraf-operator
  labels:
    app: telegraf-operator
webhooks:
  - name: telegraf.influxdata.com
    # enable the example below to limit to namespaces with specific labels only
    # namespaceSelector:
    #   matchLabels:
    #     controller: telegraf-operator
    admissionReviewVersions: ["v1beta1", "v1"]
    sideEffects: None
    clientConfig:
      service:
        name: telegraf-operator
        namespace: telegraf-operator
        path: "/mutate-v1-pod"
      caBundle: Q2VydGlmaWNhdGU6CiAgICBEYXRhOgogICAgICAgIFZlcnNpb246IDMgKDB4MikKICAgICAgICBTZXJpYWwgTnVtYmVyOiAxICgweDEpCiAgICAgICAgU2lnbmF0dXJlIEFsZ29yaXRobTogc2hhMjU2V2l0aFJTQUVuY3J5cHRpb24KICAgICAgICBJc3N1ZXI6IEM9VVMsIFNUPU1hcnlsYW5kLCBMPUJhbHRpbW9yZSwgTz1UZXN0IENBLCBMaW1pdGVkLCBPVT1TZXJ2ZXIgUmVzZWFyY2ggRGVwYXJ0bWVudCwgQ049VGVzdCBDQS9lbWFpbEFkZHJlc3M9dGVzdEBleGFtcGxlLmNvbQogICAgICAgIFZhbGlkaXR5CiAgICAgICAgICAgIE5vdCBCZWZvcmU6IE1heSAxMSAyMjoyNjoyNyAyMDIxIEdNVAogICAgICAgICAgICBOb3QgQWZ0ZXIgOiBG [...]
    rules:
      - operations: ["CREATE", "DELETE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods"]
    failurePolicy: Ignore
    reinvocationPolicy: IfNeeded
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-operator
  namespace: telegraf-operator
  labels:
    app: telegraf-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf-operator
  template:
    metadata:
      labels:
        app: telegraf-operator
    spec:
      serviceAccountName: telegraf-operator
      containers:
        - name: controller
          image: quay.io/influxdb/telegraf-operator:v1.1.1
          imagePullPolicy: IfNotPresent
          args:
            # for development purposes, enable internal plugin to report
            # telegraf metrics even if no other data is available
            - --enable-default-internal-plugin=false
            # default class to use if not specified by the pod
            - --telegraf-default-class=app
            - --telegraf-classes-directory=/config/classes
            # allow injecting telegraf-istio sidecar for pods with
            # istio sidecar annotations enabled
            #- --enable-istio-injection=true
          ports:
            - name: https
              containerPort: 9443
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "256m"
            limits:
              memory: "256Mi"
              cpu: "256m"
          volumeMounts:
            - name: certs
              readOnly: true
              mountPath: "/etc/certs"
            - name: telegraf-operator-classes
              readOnly: true
              mountPath: "/config/classes"
      volumes:
        - name: certs
          secret:
            secretName: telegraf-operator-certs
        - name: telegraf-operator-classes
          secret:
            secretName: telegraf-operator-classes
---
apiVersion: v1
kind: Service
metadata:
  name: telegraf-operator
  namespace: telegraf-operator
  labels:
    app: telegraf-operator
spec:
  ports:
    - port: 443
      targetPort: 9443
      protocol: TCP
      name: https
  selector:
    app: telegraf-operator
